# calc-Gempyre

./: .gitignore  CMakeLists.txt  README.md  app_launch.txt
gui/: calc.css  calc.html
include/: calc_resource.h
src/: computor.h  main.cpp
